--- a/htdocs/css/fontello.css
+++ b/htdocs/css/fontello.css
@@ -1,9 +1,9 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.woff2?54939146') format('woff2'),
-       url('../font/fontello.woff?54939146') format('woff'),
-       url('../font/fontello.ttf?54939146') format('truetype'),
-       url('../font/fontello.svg?54939146#fontello') format('svg');
+  src: url('../font/fontello.woff2?35478295') format('woff2'),
+       url('../font/fontello.woff?35478295') format('woff'),
+       url('../font/fontello.ttf?35478295') format('truetype'),
+       url('../font/fontello.svg?35478295#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -13,7 +13,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?54939146#fontello') format('svg');
+    src: url('../font/fontello.svg?35478295#fontello') format('svg');
   }
 }
 */
@@ -62,6 +62,10 @@
 .icon-link:before { content: '\e806'; } /* '' */
 .icon-award:before { content: '\e807'; } /* '' */
 .icon-tag:before { content: '\e808'; } /* '' */
+.icon-time:before { content: '\e809'; } /* '' */
+.icon-update:before { content: '\e80a'; } /* '' */
+.icon-cancel:before { content: '\e80b'; } /* '' */
+.icon-join:before { content: '\e80c'; } /* '' */
 .icon-vote:before { content: '\f0dc'; } /* '' */
 .icon-question:before { content: '\f128'; } /* '' */
 .icon-answer:before { content: '\f12a'; } /* '' */
