--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -34,7 +34,7 @@ a:visited {
 }
 
 a:hover {
-    text-shadow: 0 0 2px rgba(17, 119, 187, .167);
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, .1);
 }
 
 p {
@@ -231,7 +231,7 @@ input[type=submit]:hover,
 input[type=reset]:hover,
 button:hover,
 a.btn:hover {
-    text-shadow: 0 0 2px rgba(255, 255, 255, .45);
+    text-shadow: 1px 1px 2px rgba(255, 255, 255, .4);
 }
 
 input[type=button].input-small,
@@ -436,6 +436,7 @@ footer {
     background-color: rgba(255, 255, 255, .9);
     border-radius: 3px;
     text-align: center;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, .4);
 }
 
 footer > p {
@@ -444,6 +445,14 @@ footer > p {
 
 footer > p:last-child {
     margin-bottom: 0;
+}
+
+footer a {
+    text-decoration: none;
+}
+
+footer a:hover {
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, .5);
 }
 
 .spacer {
